# Q2_CRBOT_Android

./: Android.mk  Application.mk  CMakeLists.txt  README.md  cr_main.c  crbot_compat.c  crbot_compat.h
.github/workflows/: build.yml
.github/workflows/.github/workflows/: build.yml
